# insurance-agent

./: .env.example  .gitignore  pyproject.toml
app/: main.py
app/config/: settings.py
app/db/: db_config.py
app/langgraph/: graph.py  langgraph_llm.py  state.py
app/langgraph/nodes/: ask_verification.py  greeting.py  identify.py  post_verify.py  process_verification.py  verification_failed.py
app/livekit/: agent.py
app/tools/: customer_tools.py
