[project]
name = "voice-insurance-agent"
version = "0.1.0"
description = "insurance voice agent"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi[standard]",
    "uvicorn[standard]",
    "livekit",
    "langgraph",
    "langchain-core",
    "pymongo",
    "python-dotenv",
    "pydantic",
    "httpx"
]
