[project]
name = "voice-insurance-agent"
version = "0.1.0"
description = "insurance voice agent"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi[standard]",
    "uvicorn[standard]",
    "livekit",
    "langgraph",
    "langchain-core",
    "pymongo",
    "python-dotenv",
    "pydantic",
    "httpx",
    "motor>=3.7.1",
    "pydantic-settings>=2.12.0",
    "langchain-openai>=1.1.5",
    "livekit-agents[silero,turn-detector]~=1.3",
    "livekit-plugins-noise-cancellation~=0.2",
]
